# Perceptron

./: README.md  bcp  breast_cancer_prediction.py  perceptron.py  pyproject.toml
perceptron/: breast_cancer_prediction.py  perceptron.py
